# seren

./: .gitignore  Cargo.toml  LICENSE  README.md
game/: cfg.yaml
game/scenes/: a.yaml  b  b.yaml  main_menu.yaml
lib/: Cargo.toml
lib/src/: default.rs  exec.rs  game.rs  lib.rs  uial.rs
lib/src/game/: cfg.rs  choice.rs  guard.rs  line.rs  state.rs  trigger.rs
lib/src/uial/: display.rs  input.rs
src/: game.rs  logger.rs  main.rs  seren.rs  util.rs
src/game/: display.rs  input.rs
src/seren/: editor.rs  game.rs  inventory.rs  item.rs  lib.rs  opts.rs  scene.rs
src/seren/lib/: cfg.rs  inventory.rs  scene.rs  stats.rs
src/seren/lib/scene/: guard.rs  line.rs
test-project/scenes/: a.yaml  b.yaml  main_menu.yaml
