[package]
name = "seren-lib"
version = "0.1.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.tap]
version = "0.4"
[dependencies.serde_yaml]
version = "0.8"
[dependencies.log]
version = "0.4"
[dependencies.structopt]
version = "0.3"
default-features = false
[dependencies.fern]
version = "0.6"
features = ["colored"]
[dependencies.chrono]
version = "0.4"
[dependencies.termion]
version = "1"
